<resources>
    <string name="app_name">First</string>
    <string name="name">Enter your name : </string>
    <string name="job">Job</string>
    <string name="home">Home</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="signup">가입</string>
    <string name="joinus">회원가입</string>
    <string name="add">+</string>
    <string name="divide">/</string>
    <string name="title_bgcolor_edittext">배경화면 색 바꾸기</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="random">random</string>
    <string name="aboveBTN">ABOVE</string>
    <string name="right">RIGHT</string>
    <string name="left">LEFT</string>
    <string name="center">Center</string>
    <string name="bottom">BOTTOM</string>
    <string name="image_icon">ICON</string>
    <string name="name_profile">홍길동</string>
    <string name="profile_description">안녕하세요. 잘 지내시는 지요?</string>
    <string name="date">21.03.04</string>
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>
    <string name="four">FOUR</string>
    <string name="five">FIVE</string>
</resources>